force-app/main/default/objects/Time__c/Time__c.object-meta.xml
<CustomObject>
    <description>Timesheet</description>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>{yyyy}-{0}</displayFormat>
        <label>Timesheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>