force-app/main/default/objects/Time__c/fields/Task_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Date__c</fullName>
    <label>Task Date</label>
    <type>Date</type>
</CustomField>